<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_bottom"
    android:layout_width="match_parent"
    android:layout_height="@dimen/qb_px_60"
    android:background="@color/black_translucence" >

    <ImageView
        android:id="@+id/bottom_img_playctrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/qb_px_18"
        android:src="@drawable/ss_video_bottom_img_play" />

    <ImageView
        android:id="@+id/bottom_img_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/qb_px_18"
        android:src="@drawable/ss_video_bottom_sound_not_mute" />

    <TextView
        android:id="@+id/bottom_rate"
        android:layout_width="@dimen/qb_px_42"
        android:layout_height="@dimen/qb_px_21"
        android:gravity="center"
        android:background="@drawable/shape_video_rate_bg"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/qb_px_10"
        android:layout_toLeftOf="@+id/bottom_img_sound"
        android:text="@string/ss_video_rate_m"
        android:textColor="@color/white" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/bottom_img_playctrl"
        android:layout_toLeftOf="@id/bottom_rate"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/qb_px_10"
        android:layout_marginRight="@dimen/qb_px_10">

        <TextView
            android:id="@+id/bottom_tv_videoprogress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_time_progress"
            android:textColor="@color/white"
            android:textSize="@dimen/qb_px_12"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="@dimen/qb_px_8"/>

        <SeekBar
            android:id="@+id/bottom_seekbar_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bottom_tv_videoprogress"
            android:layout_toLeftOf="@id/bottom_tv_video_duration"
            android:layout_centerVertical="true"
            android:progressDrawable="@drawable/bottom_seekbar_progress"
            android:thumb="@drawable/ss_video_slider_circle"
            android:thumbOffset="0dp"
            android:maxHeight="@dimen/qb_px_4"
            android:minHeight="@dimen/qb_px_4"/>

        <TextView
            android:id="@+id/bottom_tv_video_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_time_duration"
            android:textColor="@color/white"
            android:textSize="@dimen/qb_px_12"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/qb_px_8"/>

    </RelativeLayout>

</RelativeLayout>