<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_right_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/qb_px_8"
        android:paddingBottom="@dimen/qb_px_8"
        android:paddingLeft="@dimen/qb_px_11"
        android:paddingRight="@dimen/qb_px_11">

        <!-- 分享 -->
        <LinearLayout
            android:id="@+id/normal_right_img_copy_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_5"
            android:background="@drawable/play_video_right_option_bg"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/qb_px_8"
            android:visibility="visible">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ss_video_copy_share_right_dump" />
            <TextView
                android:id="@+id/normal_right_tv_copy_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/share"
                android:layout_marginTop="@dimen/qb_px_2"
                android:visibility="gone" />
        </LinearLayout>
        <!-- 下载 -->

        <LinearLayout
            android:id="@+id/normal_right_img_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_5"
            android:background="@drawable/play_video_right_option_bg"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/qb_px_8">
            <ImageView
                android:id="@+id/iv_ss_video_dwon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ss_video_dwon_right_dump" />
            <TextView
                android:id="@+id/tv_ss_video_dwon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/download"
                android:layout_marginTop="@dimen/qb_px_2"
                android:visibility="gone" />
        </LinearLayout>

        <!-- 删除文件 -->

        <LinearLayout
            android:id="@+id/normal_right_img_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_5"
            android:background="@drawable/play_video_right_option_bg"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/qb_px_8">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ss_video_del_right_dump"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/delete"
                android:layout_marginTop="@dimen/qb_px_2"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>