<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioPlayerActivity"
    android:background="@color/background_grey">

    <include
        android:id="@+id/playact_title"
        layout="@layout/ss_audio_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_50" />

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/qb_px_25"
        android:paddingRight="@dimen/qb_px_25"
        android:layout_below="@id/playact_title"
        android:layout_above="@+id/file_operation_menu_bar"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/playact_center_icon"
                android:layout_marginTop="@dimen/qb_px_17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:src="@drawable/music_musicpreview_icon" />
            <TextView
                android:id="@+id/playact_center_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/qb_px_25"
                android:ellipsize="middle"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:textColor="#001026"
                android:textSize="@dimen/qb_px_17" />
            <LinearLayout
                android:id="@+id/ll_progress"
                android:layout_marginTop="@dimen/qb_px_31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/bottom_ctrl_current_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:padding="0dp"
                        android:text="00:00"
                        android:textColor="#7f001026"
                        android:textSize="@dimen/qb_px_10" />
                    <SeekBar
                        android:id="@+id/audio_ctrl_seekbar"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/qb_px_8"
                        android:layout_marginRight="@dimen/qb_px_8"
                        android:maxHeight="@dimen/qb_px_8"
                        android:minHeight="@dimen/qb_px_8"
                        android:progressDrawable="@drawable/new_ss_audio_audio_ctrl_bar_progress"
                        android:thumb="@drawable/schedule_musicpreview_btn"
                        android:thumbOffset="0dp"/>
                    <TextView
                        android:id="@+id/bottom_ctrl_max_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:padding="0dp"
                        android:text="-00:00"
                        android:textColor="#7f001026"
                        android:textSize="@dimen/qb_px_10" />
                </LinearLayout>
                <TextView
                    android:id="@+id/bottom_ctrl_buffering"
                    android:layout_marginTop="@dimen/qb_px_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/ss_ctrl_buffering"
                    android:textColor="#7f001026"
                    android:textSize="@dimen/qb_px_10"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="@dimen/qb_px_208"
                android:layout_height="@dimen/qb_px_208"
                android:layout_gravity="center"
                android:background="@drawable/ss_audio_keypad_ctrl_wheel_bg">
                <ImageView
                    android:id="@+id/play_ctrl_prev"
                    android:layout_width="@dimen/qb_px_31"
                    android:layout_height="@dimen/qb_px_31"
                    android:layout_marginLeft="@dimen/qb_px_10"
                    android:layout_centerVertical="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/previous_musicpreview_icon" />

                <ImageView
                    android:id="@+id/play_ctrl_play"
                    android:layout_width="@dimen/qb_px_31"
                    android:layout_height="@dimen/qb_px_31"
                    android:scaleType="centerInside"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ss_audio_play_selector" />

                <ImageView
                    android:id="@+id/play_ctrl_next"
                    android:layout_width="@dimen/qb_px_31"
                    android:layout_height="@dimen/qb_px_31"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/qb_px_10"
                    android:scaleType="centerInside"
                    android:src="@drawable/next_musicpreview_icon" />
            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_1"
        android:background="@color/color_4d000000"/>

    <LinearLayout
        android:id="@+id/file_operation_menu_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_73"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/share"
            android:textColor="#65000000"
            android:textSize="@dimen/qb_px_20"
            android:gravity="center"/>

        <TextView
            android:id="@+id/download"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#65000000"
            android:text="@string/download"
            android:textSize="@dimen/qb_px_20"
            android:gravity="center"/>

        <TextView
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#65000000"
            android:text="@string/delete"
            android:textSize="@dimen/qb_px_20"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>